--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "nonebot_plugin_tts_gal"
-version = "0.1.0"
+version = "0.1.1"
 description = ""
 authors = ["dpm12345 <1006975692@qq.com>"]
 readme = "README.md"
@@ -11,7 +11,8 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.7.3"
-nonebot2 = "^2.0.0-beta.1"
+nonebot2 = "^2.0.0b4"
+nonebot-adapter-onebot = "^2.1.1"
 numpy = "^1.18.5"
 unidecode = "^1.1.1"
 pyopenjtalk = "^0.2.0"
