--- a/example/.env.dev
+++ b/example/.env.dev
@@ -2,7 +2,7 @@ HOST=127.0.0.1
 PORT=your_port
 LOG_LEVEL=DEBUG
 FASTAPI_RELOAD=true
-auto_delete_voice = True
+auto_delete_voice = true
 tts_gal = '{
     ("宁宁", "绫地宁宁"): ["YuzuSoft",0],
     ("因幡爱瑠", "爱瑠"): ["YuzuSoft",1],
