--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "nonebot_plugin_tts_gal"
-version = "0.2.3"
+version = "0.3.0"
 description = ""
 authors = ["dpm12345 <1006975692@qq.com>"]
 readme = "README.md"
@@ -21,7 +21,8 @@ numba = "^0.56.2"
 ffmpy = "^0.3.0"
 jamo = "^0.4.1"
 scipy = "^1.5.2"
-
+pypinyin = "^0.47.0"
+jieba = "^0.42.1"
 
 
 [build-system]
