--- a/example/.env.dev
+++ b/example/.env.dev
@@ -17,7 +17,8 @@ tts_gal = '{
     ("錦あすみ","锦亚澄"): ["fupomei",2],
     ("鎌倉詩桜","镰仓诗樱"): ["fupomei",3],
     ("竜閑天梨","龙闲天梨","天梨"): ["fupomei",4],
-    ("和泉里"): ["fupomei",5],
+    ("和泉里",): ["fupomei",5],
     ("新川広夢","新川广梦"): ["fupomei",6],
     ("聖莉々子","圣莉莉子"): ["fupomei",7],
 }'
+decibel = -10
