--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "nonebot_plugin_tts_gal"
-version = "0.3.6"
-description = "部分gal角色文本转语音"
+version = "0.3.7"
+description = "部分语种的vits文本转角色语音"
 authors = ["dpm12345 <1006975692@qq.com>"]
 readme = "README.md"
 homepage = "https://github.com/dpm12345/nonebot_plugin_tts_gal"
@@ -13,17 +13,18 @@ license = "MIT"
 python = "^3.8"
 nonebot2 = "^2.0.0b4"
 nonebot-adapter-onebot = "^2.1.1"
+nonebot-plugin-apscheduler = "^0.2.0"
 numpy = "^1.20.0"
 unidecode = "^1.1.1"
 pyopenjtalk = "^0.3.0"
 torch = "^1.6.0"
 numba = "^0.56.2"
 ffmpy = "^0.3.0"
-jamo = "^0.4.1"
 scipy = "^1.5.2"
 pypinyin = "^0.47.0"
 jieba = "^0.42.1"
 httpx = "^0.23.1"
+janome = "^0.4.2"
 
 
 [build-system]
