the example of .env.*

--- a/example/.env.dev
+++ b/example/.env.dev
@@ -1,8 +1,9 @@
 HOST=127.0.0.1
 PORT=your_port
 LOG_LEVEL=DEBUG
-FASTAPI_RELOAD=true
-auto_delete_voice = true
+SUPERUSERS=["your_qq_id"]
+NICKNAME=["awesome", "bot"]
+COMMAND_START=["/"]
 tts_gal = '{
     ("宁宁", "绫地宁宁"): ["YuzuSoft",0],
     ("因幡爱瑠", "爱瑠"): ["YuzuSoft",1],
@@ -21,4 +22,16 @@ tts_gal = '{
     ("新川広夢","新川广梦"): ["fupomei",6],
     ("聖莉々子","圣莉莉子"): ["fupomei",7],
 }'
-decibel = -10
+auto_delete_voice = false
+decibel = -10 
+tts_gal_tran_type = ["baidu","tencent","youdao"]
+tts_gal_is_at = true
+tts_gal_priority = 10
+tts_gal_prefix = ""
+baidu_tran_appid = "your_baidu_appid"
+baidu_tran_apikey = "your_baidu_apikey"
+tencent_tran_region = "ap-shanghai"
+tencent_tran_secretid = "your_tencent_secretid"
+tencent_tran_secretkey = "your_tencent_secretkey"
+tencent_tran_projectid = 0
+
