--- a/example/.env.dev
+++ b/example/.env.dev
@@ -22,7 +22,7 @@ tts_gal = '{
     ("新川広夢","新川广梦"): ["fupomei",6],
     ("聖莉々子","圣莉莉子"): ["fupomei",7],
 }'
-auto_delete_voice = false
+auto_delete_voice = true
 decibel = -10 
 tts_gal_is_at = true
 tts_gal_priority = 10
